--- a/tl/state-dashboard/index.html
+++ b/tl/state-dashboard/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Pagsubaybay sa COVID-19 sa California</h1>
           
-            <p class="small-text">Huling na-update&nbsp;Abril 11, 2021 sa 10:00 AM</p>
+            <p class="small-text">Huling na-update&nbsp;Abril 12, 2021 sa 10:00 AM</p>
           
         </div>
       </div>
@@ -165,8 +165,8 @@
   <div class="container py-2">
     <div class="row pb-4">
       <div class="col-lg-10 mx-auto">
-        <h2 class="text-center color-purple">Update para sa Abril 11, 2021</h2>
-        <p>Simula Abril 11, ang California ay may 3,600,178 kumpirmadong kaso ng COVID-19, na nagresulta sa 59,218 pagkamatay.</p>
+        <h2 class="text-center color-purple">Update para sa Abril 12, 2021</h2>
+        <p>Simula Abril 12, ang California ay may 3,602,827 kumpirmadong kaso ng COVID-19, na nagresulta sa 59,249 pagkamatay.</p>
       </div>
     </div>
 
@@ -175,23 +175,23 @@
         <div class="bg-purple bd-rounded-10 px-6px py-2 text-center mt-3 summary-box">
           <div class="h5 text-uppercase color-orange line-height-1-2 mt-1">Mga Kaso</div>
 
-          <div id="total-cases-number" class="text-white font-size-1-2em my-2">             <strong>3,600,178</strong> <span class="text-300">kabuuan</span>           </div>
-          <div id="total-cases-today" class="text-white font-size-1-2em mt-2">             <strong>4,954</strong> <span class="text-300">ngayong araw</span>           </div>
+          <div id="total-cases-number" class="text-white font-size-1-2em my-2">             <strong>3,602,827</strong> <span class="text-300">kabuuan</span>           </div>
+          <div id="total-cases-today" class="text-white font-size-1-2em mt-2">             <strong>2,649</strong> <span class="text-300">ngayong araw</span>           </div>
           <div id="total-cases-increase" class="text-white text-xs line-height-1-5 my-2">              <span class="chart-arrow" arria-hidden="true">               <svg id="arrow-up1" class="d-none" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 29 29" style="enable-background:new 0 0 29 29;" xml:space="preserve">                 <path class="chart-arrow-path" d="M28.11,7.27c0-0.62-0.5-1.13-1.13-1.13h-7.64c-0.62,0-1.13,0.5-1.13,1.13s0.5,1.13,1.13,1.13h5.05l-8.16,8.25
  l-4.89-4.89c-0.44-0.44-1.15-0.44-1.59,0L0.9,20.6c-0.44,0.44-0.44,1.15,0,1.59c0.22,0.22,0.51,0.33,0.8,0.33s0.58-0.11,0.8-0.33
  l8.05-8.05l4.89,4.89c0.21,0.21,0.5,0.33,0.8,0.33c0,0,0,0,0,0c0.3,0,0.59-0.12,0.8-0.33l8.82-8.91v4.68c0,0.62,0.5,1.13,1.13,1.13
  s1.13-0.5,1.13-1.13V7.38c0-0.02,0-0.04,0-0.06C28.11,7.3,28.11,7.28,28.11,7.27z"></path>               </svg>                <!--negative arrow-->               <svg id="arrow-down1" class="" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 29 29" style="enable-background:new 0 0 29 29;" xml:space="preserve">                 <path class="chart-arrow-path" d="M28.11,21.4c0,0.62-0.5,1.13-1.13,1.13h-7.64c-0.62,0-1.13-0.5-1.13-1.13s0.5-1.13,1.13-1.13h5.05l-8.16-8.25
  l-4.89,4.89c-0.44,0.44-1.15,0.44-1.59,0L0.9,8.07c-0.44-0.44-0.44-1.15,0-1.59c0.22-0.22,0.51-0.33,0.8-0.33s0.58,0.11,0.8,0.33
  l8.05,8.05l4.89-4.89c0.21-0.21,0.5-0.33,0.8-0.33c0,0,0,0,0,0c0.3,0,0.59,0.12,0.8,0.33l8.82,8.91v-4.68c0-0.62,0.5-1.13,1.13-1.13
- s1.13,0.5,1.13,1.13v7.42c0,0.02,0,0.04,0,0.06C28.11,21.36,28.11,21.38,28.11,21.4z"></path>               </svg>             </span> 4.8 <span class="text-300">mga bagong kaso sa bawat 100k</span>            </div>
+ s1.13,0.5,1.13,1.13v7.42c0,0.02,0,0.04,0,0.06C28.11,21.36,28.11,21.38,28.11,21.4z"></path>               </svg>             </span> 4.7 <span class="text-300">mga bagong kaso sa bawat 100k</span>            </div>
         </div>
       </div>
       <div class="col-md-3 px-10px">
         <div class="bg-purple bd-rounded-10 px-6px py-2 text-center mt-3 summary-box">
           <div class="h5 text-uppercase color-orange line-height-1-2 mt-1">Mga Pagkamatay</div>
 
-          <div id="total-deaths-number" class="text-white font-size-1-2em my-2">             <strong>59,218</strong> <span class="text-300">kabuuan</span>           </div>
-          <div id="total-deaths-today" class="text-white font-size-1-2em mt-2">             <strong>105</strong> <span class="text-300">ngayong araw</span>           </div>
+          <div id="total-deaths-number" class="text-white font-size-1-2em my-2">             <strong>59,249</strong> <span class="text-300">kabuuan</span>           </div>
+          <div id="total-deaths-today" class="text-white font-size-1-2em mt-2">             <strong>31</strong> <span class="text-300">ngayong araw</span>           </div>
           <div id="total-deaths-increase" class="text-white text-xs line-height-1-5 my-2">              <span class="chart-arrow" arria-hidden="true">               <svg id="arrow-up2" class="d-none" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 29 29" style="enable-background:new 0 0 29 29;" xml:space="preserve">                 <path class="chart-arrow-path" d="M28.11,7.27c0-0.62-0.5-1.13-1.13-1.13h-7.64c-0.62,0-1.13,0.5-1.13,1.13s0.5,1.13,1.13,1.13h5.05l-8.16,8.25
  l-4.89-4.89c-0.44-0.44-1.15-0.44-1.59,0L0.9,20.6c-0.44,0.44-0.44,1.15,0,1.59c0.22,0.22,0.51,0.33,0.8,0.33s0.58-0.11,0.8-0.33
  l8.05-8.05l4.89,4.89c0.21,0.21,0.5,0.33,0.8,0.33c0,0,0,0,0,0c0.3,0,0.59-0.12,0.8-0.33l8.82-8.91v4.68c0,0.62,0.5,1.13,1.13,1.13
@@ -205,29 +205,29 @@
         <div class="bg-purple bd-rounded-10 px-6px py-2 text-center mt-3 summary-box">
           <div class="h5 text-uppercase color-orange line-height-1-2 mt-1">Mga Pagsusuri</div>
 
-          <div id="total-tested-number" class="text-white font-size-1-2em my-2"><strong>56,363,675</strong> <span class="text-300">kabuuan</span>           </div>
-          <div id="total-tested-today" class="text-white font-size-1-2em mt-2">             <strong>239,453</strong> <span class="text-300">ngayong araw</span>           </div>
+          <div id="total-tested-number" class="text-white font-size-1-2em my-2"><strong>56,593,271</strong> <span class="text-300">kabuuan</span>           </div>
+          <div id="total-tested-today" class="text-white font-size-1-2em mt-2">             <strong>229,596</strong> <span class="text-300">ngayong araw</span>           </div>
           <div id="total-tested-increase" class="text-white text-xs line-height-1-5 my-2">              <span class="chart-arrow" arria-hidden="true">               <svg id="arrow-up3" class="d-none" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 29 29" style="enable-background:new 0 0 29 29;" xml:space="preserve">                 <path class="chart-arrow-path" d="M28.11,7.27c0-0.62-0.5-1.13-1.13-1.13h-7.64c-0.62,0-1.13,0.5-1.13,1.13s0.5,1.13,1.13,1.13h5.05l-8.16,8.25
  l-4.89-4.89c-0.44-0.44-1.15-0.44-1.59,0L0.9,20.6c-0.44,0.44-0.44,1.15,0,1.59c0.22,0.22,0.51,0.33,0.8,0.33s0.58-0.11,0.8-0.33
  l8.05-8.05l4.89,4.89c0.21,0.21,0.5,0.33,0.8,0.33c0,0,0,0,0,0c0.3,0,0.59-0.12,0.8-0.33l8.82-8.91v4.68c0,0.62,0.5,1.13,1.13,1.13
  s1.13-0.5,1.13-1.13V7.38c0-0.02,0-0.04,0-0.06C28.11,7.3,28.11,7.28,28.11,7.27z"></path>               </svg>                <!--negative arrow-->               <svg id="arrow-down3" class="" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 29 29" style="enable-background:new 0 0 29 29;" xml:space="preserve">                 <path class="chart-arrow-path" d="M28.11,21.4c0,0.62-0.5,1.13-1.13,1.13h-7.64c-0.62,0-1.13-0.5-1.13-1.13s0.5-1.13,1.13-1.13h5.05l-8.16-8.25
  l-4.89,4.89c-0.44,0.44-1.15,0.44-1.59,0L0.9,8.07c-0.44-0.44-0.44-1.15,0-1.59c0.22-0.22,0.51-0.33,0.8-0.33s0.58,0.11,0.8,0.33
  l8.05,8.05l4.89-4.89c0.21-0.21,0.5-0.33,0.8-0.33c0,0,0,0,0,0c0.3,0,0.59,0.12,0.8,0.33l8.82,8.91v-4.68c0-0.62,0.5-1.13,1.13-1.13
- s1.13,0.5,1.13,1.13v7.42c0,0.02,0,0.04,0,0.06C28.11,21.36,28.11,21.38,28.11,21.4z"></path>               </svg>             </span> 1.6% <span class="text-300">pagpopositibo sa pagsusuri</span>            </div>
+ s1.13,0.5,1.13,1.13v7.42c0,0.02,0,0.04,0,0.06C28.11,21.36,28.11,21.38,28.11,21.4z"></path>               </svg>             </span> 1.5% <span class="text-300">pagpopositibo sa pagsusuri</span>            </div>
         </div>
       </div>
       <div class="col-md-3 px-10px">
         <div class="bg-purple bd-rounded-10 px-6px py-2 text-center mt-3 summary-box">
           <div class="h5 text-uppercase color-orange line-height-1-2 mt-1">Mga Naibigay na Bakuna</div>
 
-          <div id="total-vaccines-number" class="text-white font-size-1-2em my-4"><strong>22,777,893</strong> <span class="text-300">kabuuan</span>           </div>           
+          <div id="total-vaccines-number" class="text-white font-size-1-2em my-4"><strong>22,974,654</strong> <span class="text-300">kabuuan</span>           </div>           
         </div>
       </div>
     </div>
 
     <div class="row pb-4 py-5">
       <div class="col-lg-10 mx-auto">
-        <p class="small-text">Na-update noong Abril 11, 2021, na may datos mula sa Abril 10, 2021.</p>
+        <p class="small-text">Na-update noong Abril 12, 2021, na may datos mula sa Abril 11, 2021.</p>
 
         <p class="small-text">Tala: Ang rate ng kaso ay batay sa 7 araw na average na may 7 araw na lag. Ang mga rate ng pagkamatay ay batay sa 7 araw na average na may 21 araw na lag dahil sa mga pagkaantala sa pag-uulat. Nakabatay ang pagpopositibo ng pagsusuri sa isang 7 araw na araw nang walang lag. Ang pagbabago sa direksyon ay inihahambing sa naunang 7 araw na panahon. Ang datos ay ibinibigay ng California Department of Public Health.</p>
       </div>
@@ -271,7 +271,7 @@
 
 
 
-<p>Ang California ay may 3,600,178 kumpirmadong kaso ng COVID-19, na nagresulta sa 59,218 pagkamatay.</p>
+<p>Ang California ay may 3,602,827 kumpirmadong kaso ng COVID-19, na nagresulta sa 59,249 pagkamatay.</p>
 
 
 
@@ -306,7 +306,7 @@
 
 
 
-<p>Ang dami ng mga resulta ng diagnostic na pagsusuri sa COVID-19 sa California ay umabot sa kabuuang 56,363,675, pagtaas na 239,453 na pagsusuri mula sa kabuuan ng naunang araw. Ang rate ng mga positibong pagsusuri sa nakalipas na 7 araw ay 1.6%.</p>
+<p>Ang dami ng mga resulta ng diagnostic na pagsusuri sa COVID-19 sa California ay umabot sa kabuuang 56,593,271, pagtaas na 229,596 na pagsusuri mula sa kabuuan ng naunang araw. Ang rate ng mga positibong pagsusuri sa nakalipas na 7 araw ay 1.5%.</p>
 
 
 
@@ -341,7 +341,7 @@
 
 
 
-<p>Ang dami ng mga pagpapaospital dahil sa kumpirmado at pinaghihinalaang kaso ng COVID-19 sa California ay umabot sa kabuuang 2,123, a decrease of 47 mula sa kabuuan ng naunang araw. Ang dami ng mga pasyente sa ICU dahil sa kumpirmado at pinaghihinalaang kaso ng COVID-19 sa California ay umabot sa kabuuang 469, a decrease of 22 mula sa kabuuan ng naunang araw.</p>
+<p>Ang dami ng mga pagpapaospital dahil sa kumpirmado at pinaghihinalaang kaso ng COVID-19 sa California ay umabot sa kabuuang 2,113, a decrease of 10 mula sa kabuuan ng naunang araw. Ang dami ng mga pasyente sa ICU dahil sa kumpirmado at pinaghihinalaang kaso ng COVID-19 sa California ay umabot sa kabuuang 490, an increase of 21 mula sa kabuuan ng naunang araw.</p>
 
 
 
