--- a/zh-hant/state-dashboard/index.html
+++ b/zh-hant/state-dashboard/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>加州COVID-19追蹤</h1>
           
-            <p class="small-text">最近更新&nbsp;2021年4月11日, 上午10:00</p>
+            <p class="small-text">最近更新&nbsp;2021年4月12日, 上午10:00</p>
           
         </div>
       </div>
@@ -165,8 +165,8 @@
   <div class="container py-2">
     <div class="row pb-4">
       <div class="col-lg-10 mx-auto">
-        <h2 class="text-center color-purple">更新於 2021年4月11日</h2>
-        <p>截至2021年4月11日，加州共有3,600,178例COVID-19確診病例，造成59,218人死亡。</p>
+        <h2 class="text-center color-purple">更新於 2021年4月12日</h2>
+        <p>截至2021年4月12日，加州共有3,602,827例COVID-19確診病例，造成59,249人死亡。</p>
       </div>
     </div>
 
@@ -175,23 +175,23 @@
         <div class="bg-purple bd-rounded-10 px-6px py-2 text-center mt-3 summary-box">
           <div class="h5 text-uppercase color-orange line-height-1-2 mt-1">病例數</div>
 
-          <div id="total-cases-number" class="text-white font-size-1-2em my-2"><strong>3,600,178</strong> <span class="text-300">總共</span>           </div>
-          <div id="total-cases-today" class="text-white font-size-1-2em mt-2"><strong>4,954</strong> <span class="text-300">今日</span>           </div>
+          <div id="total-cases-number" class="text-white font-size-1-2em my-2"><strong>3,602,827</strong> <span class="text-300">總共</span>           </div>
+          <div id="total-cases-today" class="text-white font-size-1-2em mt-2"><strong>2,649</strong> <span class="text-300">今日</span>           </div>
           <div id="total-cases-increase" class="text-white text-xs line-height-1-5 my-2">              <span class="chart-arrow" arria-hidden="true">               <svg id="arrow-up1" class="d-none" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 29 29" style="enable-background:new 0 0 29 29;" xml:space="preserve">                 <path class="chart-arrow-path" d="M28.11,7.27c0-0.62-0.5-1.13-1.13-1.13h-7.64c-0.62,0-1.13,0.5-1.13,1.13s0.5,1.13,1.13,1.13h5.05l-8.16,8.25
  l-4.89-4.89c-0.44-0.44-1.15-0.44-1.59,0L0.9,20.6c-0.44,0.44-0.44,1.15,0,1.59c0.22,0.22,0.51,0.33,0.8,0.33s0.58-0.11,0.8-0.33
  l8.05-8.05l4.89,4.89c0.21,0.21,0.5,0.33,0.8,0.33c0,0,0,0,0,0c0.3,0,0.59-0.12,0.8-0.33l8.82-8.91v4.68c0,0.62,0.5,1.13,1.13,1.13
  s1.13-0.5,1.13-1.13V7.38c0-0.02,0-0.04,0-0.06C28.11,7.3,28.11,7.28,28.11,7.27z"></path>               </svg>                <!--negative arrow-->               <svg id="arrow-down1" class="" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 29 29" style="enable-background:new 0 0 29 29;" xml:space="preserve">                 <path class="chart-arrow-path" d="M28.11,21.4c0,0.62-0.5,1.13-1.13,1.13h-7.64c-0.62,0-1.13-0.5-1.13-1.13s0.5-1.13,1.13-1.13h5.05l-8.16-8.25
  l-4.89,4.89c-0.44,0.44-1.15,0.44-1.59,0L0.9,8.07c-0.44-0.44-0.44-1.15,0-1.59c0.22-0.22,0.51-0.33,0.8-0.33s0.58,0.11,0.8,0.33
  l8.05,8.05l4.89-4.89c0.21-0.21,0.5-0.33,0.8-0.33c0,0,0,0,0,0c0.3,0,0.59,0.12,0.8,0.33l8.82,8.91v-4.68c0-0.62,0.5-1.13,1.13-1.13
- s1.13,0.5,1.13,1.13v7.42c0,0.02,0,0.04,0,0.06C28.11,21.36,28.11,21.38,28.11,21.4z"></path>               </svg></span> 4.8 <span class="text-300">每100K人中的新增病例數</span>            </div>
+ s1.13,0.5,1.13,1.13v7.42c0,0.02,0,0.04,0,0.06C28.11,21.36,28.11,21.38,28.11,21.4z"></path>               </svg></span> 4.7 <span class="text-300">每100K人中的新增病例數</span>            </div>
         </div>
       </div>
       <div class="col-md-3 px-10px">
         <div class="bg-purple bd-rounded-10 px-6px py-2 text-center mt-3 summary-box">
           <div class="h5 text-uppercase color-orange line-height-1-2 mt-1">死亡數</div>
 
-          <div id="total-deaths-number" class="text-white font-size-1-2em my-2"><strong>59,218</strong> <span class="text-300">總共</span>           </div>
-          <div id="total-deaths-today" class="text-white font-size-1-2em mt-2"><strong>105</strong> <span class="text-300">今日</span>           </div>
+          <div id="total-deaths-number" class="text-white font-size-1-2em my-2"><strong>59,249</strong> <span class="text-300">總共</span>           </div>
+          <div id="total-deaths-today" class="text-white font-size-1-2em mt-2"><strong>31</strong> <span class="text-300">今日</span>           </div>
           <div id="total-deaths-increase" class="text-white text-xs line-height-1-5 my-2">              <span class="chart-arrow" arria-hidden="true">               <svg id="arrow-up2" class="d-none" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 29 29" style="enable-background:new 0 0 29 29;" xml:space="preserve">                 <path class="chart-arrow-path" d="M28.11,7.27c0-0.62-0.5-1.13-1.13-1.13h-7.64c-0.62,0-1.13,0.5-1.13,1.13s0.5,1.13,1.13,1.13h5.05l-8.16,8.25
  l-4.89-4.89c-0.44-0.44-1.15-0.44-1.59,0L0.9,20.6c-0.44,0.44-0.44,1.15,0,1.59c0.22,0.22,0.51,0.33,0.8,0.33s0.58-0.11,0.8-0.33
  l8.05-8.05l4.89,4.89c0.21,0.21,0.5,0.33,0.8,0.33c0,0,0,0,0,0c0.3,0,0.59-0.12,0.8-0.33l8.82-8.91v4.68c0,0.62,0.5,1.13,1.13,1.13
@@ -205,29 +205,29 @@
         <div class="bg-purple bd-rounded-10 px-6px py-2 text-center mt-3 summary-box">
           <div class="h5 text-uppercase color-orange line-height-1-2 mt-1">檢測數</div>
 
-          <div id="total-tested-number" class="text-white font-size-1-2em my-2"><strong>56,363,675</strong> <span class="text-300">總共</span>           </div>
-          <div id="total-tested-today" class="text-white font-size-1-2em mt-2"><strong>239,453</strong> <span class="text-300">今日</span>           </div>
+          <div id="total-tested-number" class="text-white font-size-1-2em my-2"><strong>56,593,271</strong> <span class="text-300">總共</span>           </div>
+          <div id="total-tested-today" class="text-white font-size-1-2em mt-2"><strong>229,596</strong> <span class="text-300">今日</span>           </div>
           <div id="total-tested-increase" class="text-white text-xs line-height-1-5 my-2">              <span class="chart-arrow" arria-hidden="true">               <svg id="arrow-up3" class="d-none" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 29 29" style="enable-background:new 0 0 29 29;" xml:space="preserve">                 <path class="chart-arrow-path" d="M28.11,7.27c0-0.62-0.5-1.13-1.13-1.13h-7.64c-0.62,0-1.13,0.5-1.13,1.13s0.5,1.13,1.13,1.13h5.05l-8.16,8.25
  l-4.89-4.89c-0.44-0.44-1.15-0.44-1.59,0L0.9,20.6c-0.44,0.44-0.44,1.15,0,1.59c0.22,0.22,0.51,0.33,0.8,0.33s0.58-0.11,0.8-0.33
  l8.05-8.05l4.89,4.89c0.21,0.21,0.5,0.33,0.8,0.33c0,0,0,0,0,0c0.3,0,0.59-0.12,0.8-0.33l8.82-8.91v4.68c0,0.62,0.5,1.13,1.13,1.13
  s1.13-0.5,1.13-1.13V7.38c0-0.02,0-0.04,0-0.06C28.11,7.3,28.11,7.28,28.11,7.27z"></path>               </svg>                <!--negative arrow-->               <svg id="arrow-down3" class="" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 29 29" style="enable-background:new 0 0 29 29;" xml:space="preserve">                 <path class="chart-arrow-path" d="M28.11,21.4c0,0.62-0.5,1.13-1.13,1.13h-7.64c-0.62,0-1.13-0.5-1.13-1.13s0.5-1.13,1.13-1.13h5.05l-8.16-8.25
  l-4.89,4.89c-0.44,0.44-1.15,0.44-1.59,0L0.9,8.07c-0.44-0.44-0.44-1.15,0-1.59c0.22-0.22,0.51-0.33,0.8-0.33s0.58,0.11,0.8,0.33
  l8.05,8.05l4.89-4.89c0.21-0.21,0.5-0.33,0.8-0.33c0,0,0,0,0,0c0.3,0,0.59,0.12,0.8,0.33l8.82,8.91v-4.68c0-0.62,0.5-1.13,1.13-1.13
- s1.13,0.5,1.13,1.13v7.42c0,0.02,0,0.04,0,0.06C28.11,21.36,28.11,21.38,28.11,21.4z"></path>               </svg></span> 1.6%<span class="text-300">檢測呈陽性率</span>            </div>
+ s1.13,0.5,1.13,1.13v7.42c0,0.02,0,0.04,0,0.06C28.11,21.36,28.11,21.38,28.11,21.4z"></path>               </svg></span> 1.5%<span class="text-300">檢測呈陽性率</span>            </div>
         </div>
       </div>
       <div class="col-md-3 px-10px">
         <div class="bg-purple bd-rounded-10 px-6px py-2 text-center mt-3 summary-box">
           <div class="h5 text-uppercase color-orange line-height-1-2 mt-1">施打的疫苗數</div>
 
-          <div id="total-vaccines-number" class="text-white font-size-1-2em my-4"><strong>22,777,893</strong> <span class="text-300">總共</span>           </div>
+          <div id="total-vaccines-number" class="text-white font-size-1-2em my-4"><strong>22,974,654</strong> <span class="text-300">總共</span>           </div>
         </div>
       </div>
     </div>
 
     <div class="row pb-4 py-5">
       <div class="col-lg-10 mx-auto">
-        <p class="small-text">根據2021年4月10日的數據在2021年4月11日更新。</p>
+        <p class="small-text">根據2021年4月11日的數據在2021年4月12日更新。</p>
 
         <p class="small-text">注：患病率為7日平均數據，有7天的滯後期。死亡率為7日平均數據，有21天的滯後期，因為報告有延遲。檢測呈陽性率為7日平均數據，無滯後期。定向變化與上一個7日週期作比較。數據由加州公共衛生局 (California Department of Public Health) 提供。</p>
       </div>
@@ -271,7 +271,7 @@
 
 
 
-<p>加州共有3,600,178例COVID-19確診病例，造成59,218人死亡。</p>
+<p>加州共有3,602,827例COVID-19確診病例，造成59,249人死亡。</p>
 
 
 
@@ -306,7 +306,7 @@
 
 
 
-<p>加州的COVID-19診斷檢測結果數量總共達到了56,363,675，較前一天的總數增加了239,453。過去7天的檢測呈陽性率為1.6%。</p>
+<p>加州的COVID-19診斷檢測結果數量總共達到了56,593,271，較前一天的總數增加了229,596。過去7天的檢測呈陽性率為1.5%。</p>
 
 
 
@@ -341,7 +341,7 @@
 
 
 
-<p>在加州因確診及疑似感染COVID-19而住院的人數總共達到了2,123，a decrease of 47來自前一天的總數。在加州因確診及疑似感染COVID-19而進入ICU的人數總共達到了469，a decrease of 22來自前一天的總數。</p>
+<p>在加州因確診及疑似感染COVID-19而住院的人數總共達到了2,113，a decrease of 10來自前一天的總數。在加州因確診及疑似感染COVID-19而進入ICU的人數總共達到了490，an increase of 21來自前一天的總數。</p>
 
 
 
