--- a/telehealth/index.html
+++ b/telehealth/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Getting health care from home through telehealth</h1>
           
-            <p class="small-text">Last updated&nbsp;April 8, 2021 at 11:29 AM</p>
+            <p class="small-text">Last updated&nbsp;April 12, 2021 at 1:29 PM</p>
           
         </div>
       </div>
