--- a/zh-hans/latest-news/index.html
+++ b/zh-hans/latest-news/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>有关COVID-19的最新消息</h1>
           
-            <p class="small-text">最后更新时间&nbsp;April 12, 2021 at 1:58 PM</p>
+            <p class="small-text">最后更新时间&nbsp;April 12, 2021 at 3:32 PM</p>
           
         </div>
       </div>
@@ -157,6 +157,14 @@
     <div class="row">
       <div class="col-lg-10 mx-auto">
         <div class="card border-0 border-bottom rounded-0" lang="en-US">
+        <div class="card-body pl-0" lang="en-US">
+          <h2 class="card-title lead" lang="en-US">
+            <a href="https://www.cdph.ca.gov/Programs/OPA/Pages/NR21-121.aspx" lang="en-US" hreflang="en-US" rel="external">State Officials Announce Latest COVID-19 Facts&nbsp;(#379)</a>
+          </h2>
+          <p class="card-text" lang="en-US"><small class="text-muted"><!--14a210d2dd6099a55e872d74294bf40a -->April 11, 2021</small></p>
+          <div class="card-text" lang="en-US">Today, the California Department of Public Health (CDPH) released the most recent statistics on COVID-19 and updates on the state's pandemic response.</div>
+        </div>
+      </div> <div class="card border-0 border-bottom rounded-0" lang="en-US">
         <div class="card-body pl-0" lang="en-US">
           <h2 class="card-title lead" lang="en-US">
             <a href="https://www.cdph.ca.gov/Programs/OPA/Pages/NR21-120.aspx" lang="en-US" hreflang="en-US" rel="external">State Officials Announce Latest COVID-19 Facts&nbsp;(#378)</a>
